Fixed: Bug com o security config
Alterei para a versão mais recente do spring